--- a/src/css/secoes/header.css
+++ b/src/css/secoes/header.css
@@ -115,7 +115,7 @@
         display: block; 
     }
 
-    /* pega todos os itens que após o input e que sao irmaos dele */
+    /* pega todos os itens que após o input e que sao irmãos dele */
     .header nav input:checked ~ ul {
         display: block;
     }
